<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imgWelcome"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:scaleType="fitXY"
            android:src="@drawable/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

        <ImageView
            android:id="@+id/imgClouds"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="170dp"
            android:scaleType="fitXY"
            android:src="@drawable/clouds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/txtWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/chivo_black"
            android:text="@string/welcome_to_nready_to_travel"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="@+id/imgClouds"
            app:layout_constraintTop_toTopOf="@+id/imgClouds" />

        <TextView
            android:id="@+id/txtSignUpTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/sign_up_with_facebook_for_the_most_fulfilling_trip_planning_experience_with_us"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtWelcomeTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcomeTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:fontFamily="@font/chivo_bold"
            android:padding="20dp"
            android:text="@string/log_in_with_facebook"
            android:textAllCaps="false"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgClouds" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/chivo_bold"
            android:padding="20dp"
            android:text="@string/log_in_with_email_address"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginFB" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/chivo_bold"
            android:padding="20dp"
            android:text="@string/create_a_new_account"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>