<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:backgroundTint="@color/placeholder_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgGuitar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/guitar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

                <TextView
                    android:id="@+id/txtAlmostThereTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/almost_there"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgBack" />

                <TextView
                    android:id="@+id/txtCompleteTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@string/complete_the_form_below_to_create_your_ready_to_travel_account"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtAlmostThereTitle" />

                <TextView
                    android:id="@+id/txtMandatory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/chivo_bold"
                    android:text="@string/mandatory"
                    android:textColor="@color/hint"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCompleteTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txtFirstNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/first_name"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chivo_regular"
            android:hint="@string/regina"
            android:inputType="textPersonName"
            android:nextFocusForward="@+id/edtLastName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtFirstNameTitle"
            app:layout_constraintTop_toBottomOf="@id/txtFirstNameTitle" />

        <TextView
            android:id="@+id/txtLastNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/last_name"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chivo_regular"
            android:hint="Chan"
            android:inputType="textPersonName"
            android:nextFocusForward="@+id/edtEmail"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtFirstNameTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtLastNameTitle" />

        <TextView
            android:id="@+id/txtEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chivo_bold"
            android:text="Email Address *"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chivo_regular"
            android:hint="regina@codigo.co"
            android:nextFocusForward="@+id/edtNationality"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtEmailTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailTitle" />


        <TextView
            android:id="@+id/txtDOBTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/date_of_birth"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <EditText
            android:id="@+id/edtDOB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/dob"
            android:editable="false"
            android:fontFamily="@font/chivo_regular"
            android:hint="DD/MM/YYYY"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
            app:layout_constraintStart_toStartOf="@+id/txtDOBTitle"
            app:layout_constraintTop_toTopOf="@+id/materialCardView2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/placeholder_bg"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDOBTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/white"
                    android:padding="16dp"
                    android:text="Female"
                    android:textAllCaps="false"
                    android:textColor="@color/primary"
                    app:cornerRadius="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/primary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/white"
                    android:padding="16dp"
                    android:text="Male"
                    android:textAllCaps="false"
                    android:textColor="@color/primary"
                    app:cornerRadius="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/primary" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txtNationalityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/nationality"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDOB" />

        <EditText
            android:id="@+id/edtNationality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chivo_regular"
            android:inputType="textPersonName"
            android:hint="@string/singaporean"
            android:nextFocusForward="@+id/edtResidence"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtNationalityTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtNationalityTitle" />

        <TextView
            android:id="@+id/txtResidenceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/country_of_residence"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNationality" />

        <EditText
            android:id="@+id/edtResidence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chivo_regular"
            android:hint="@string/singapore"
            android:inputType="textPersonName"
            android:nextFocusForward="@+id/edtMobile"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtResidenceTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtResidenceTitle" />

        <TextView
            android:id="@+id/txtMobileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/mobile_no_optional"
            android:textColor="@color/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtResidence" />

        <EditText
            android:id="@+id/edtMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/chivo_regular"
            android:hint="+65 | 81399124"
            android:inputType="phone"
            android:nextFocusForward="@+id/btnCreateAccount"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtMobileTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtMobileTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/chivo_bold"
            android:padding="20dp"
            android:text="Create my account now"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtMobile" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>